--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ body {
 .content-tabs .content {
     background-color: #666;
     height: 300px;
-    margin-top: -10px; /* Make the content box align with the tabs */
-    padding-top: 40px; /* Adjust the padding for content */
+    margin-top: -10px; 
+    padding-top: 40px; 
     position: relative;
 }
 
