--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ body {
 .content-tabs .content {
     background-color: #666;
     height: 300px;
-    margin-top: -10px; 
-    padding-top: 40px; 
+    margin-top: -10px;
+    padding-top: 40px;
     position: relative;
 }
 
@@ -83,6 +83,18 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+}
+
+.main-content .right .icons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 5px;
+}
+
+.main-content .right .icons .small-box {
+    width: 20px;
+    height: 20px;
+    background-color: #999;
 }
 
 .main-content .right .content {
@@ -134,11 +146,13 @@ body {
 }
 
 .identity-card {
+    display: flex;
+    align-items: flex-start;
     margin-bottom: 20px;
 }
 
 .long-box {
-    width: 100%;
+    width: 40%;
     height: 60px;
     background-color: #ddd;
     display: flex;
@@ -146,12 +160,14 @@ body {
     justify-content: center;
     font-size: 14px;
     color: #333;
+    float: left;
+    margin-right: 10px;
 }
 
 .identity-description {
-    margin-top: 5px;
     font-size: 12px;
     color: #666;
+    margin-top: 0;
 }
 
 .separator {
@@ -171,7 +187,3 @@ body {
     justify-content: center;
     position: relative;
 }
-
-
-
-
